--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-loading-icons": "^1.0.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.5.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
